--- a/pom.xml
+++ b/pom.xml
@@ -10,19 +10,19 @@
 
   <name>Example of multi-module Maven project</name>
 
-  <modules>
-    <module>module1</module>
-    <module>module2</module>
-    <module>tests</module>
-  </modules>
+  <!--<modules>-->
+    <!--<module>module1</module>-->
+    <!--<module>module2</module>-->
+    <!--<module>tests</module>-->
+  <!--</modules>-->
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.source>1.8</maven.compiler.source>
-    <sonar.host.url>http://35.236.113.144</sonar.host.url>
-    <sonar.login>7eeacf997af63d163db9937968ab516181cb9c89</sonar.login>
+    <sonar.projectKey>org.sonarqube:sonarscanner-maven-aggregate</sonar.projectKey>
+    <sonar.language>java</sonar.language>
     <aggregate.report.dir>tests/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
   </properties>
 
