--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <!--<sonar.projectKey>org.sonarqube:sonarscanner-maven-aggregate</sonar.projectKey>-->
     <sonar.language>java</sonar.language>
+      <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
     <aggregate.report.dir>module1/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
   </properties>
 
