--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <!--<sonar.projectKey>org.sonarqube:sonarscanner-maven-aggregate</sonar.projectKey>-->
     <sonar.language>java</sonar.language>
     <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-    <aggregate.report.dir>target/</aggregate.report.dir>
+    <aggregate.report.dir>target/site/jacoco-aggregate/jacoco.xml/</aggregate.report.dir>
     <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
   </properties>
 
@@ -67,19 +67,23 @@
   <profiles>
     <profile>
       <id>coverage</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
       <build>
         <plugins>
           <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.4</version>
             <executions>
               <execution>
                 <id>prepare-agent</id>
                 <goals>
                   <goal>prepare-agent</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>report</id>
+                <goals>
+                  <goal>report</goal>
                 </goals>
               </execution>
             </executions>
