--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,6 @@
   </properties>
 
   <dependencies>
-<!--    <dependency>-->
-<!--      <groupId>com.google.guava</groupId>-->
-<!--      <artifactId>guava</artifactId>-->
-<!--      <version>27.1-jre</version>-->
-<!--    </dependency>-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -65,7 +60,7 @@
     <profile>
       <id>coverage</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+<!--        <activeByDefault>true</activeByDefault>-->
       </activation>
       <build>
         <plugins>
