--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -11,9 +11,9 @@
 
   <artifactId>tests</artifactId>
 
-  <properties>
-    <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
-  </properties>
+<!--  <properties>-->
+<!--    <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>-->
+<!--  </properties>-->
 
   <name>Tests</name>
 
