--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,36 @@
     </pluginManagement>
   </build>
 
+  <!--  <profiles>-->
+  <!--    <profile>-->
+  <!--      <id>coverage</id>-->
+  <!--      <activation>-->
+  <!--        <activeByDefault>true</activeByDefault>-->
+  <!--      </activation>-->
+  <!--      <build>-->
+  <!--        <plugins>-->
+  <!--          <plugin>-->
+  <!--            <groupId>org.jacoco</groupId>-->
+  <!--            <artifactId>jacoco-maven-plugin</artifactId>-->
+  <!--            <executions>-->
+  <!--              <execution>-->
+  <!--                <id>prepare-agent</id>-->
+  <!--                <goals>-->
+  <!--                  <goal>prepare-agent</goal>-->
+  <!--                </goals>-->
+  <!--              </execution>-->
+  <!--            </executions>-->
+  <!--          </plugin>-->
+  <!--        </plugins>-->
+  <!--      </build>-->
+  <!--    </profile>-->
+  <!--  </profiles>-->
+
   <profiles>
     <profile>
       <id>coverage</id>
       <activation>
-<!--        <activeByDefault>true</activeByDefault>-->
+        <activeByDefault>true</activeByDefault>
       </activation>
       <build>
         <plugins>
@@ -77,9 +102,8 @@
               <execution>
                 <id>report</id>
                 <goals>
-                  <goal>report-aggregate</goal>
+                  <goal>report</goal>
                 </goals>
-                <phase>verify</phase>
               </execution>
             </executions>
           </plugin>
